@@ -1,3 +1,13 @@
+CR-2007-08-17-1: Bugfix:    o compile_source() ignores compile errors
+                 Issue:     143
+                 Review:    RH
+
+CR-2007-08-17-0: Enhancem.: o hedeby: added error message for distinst
+                 Bugfix:    o hedeby: testsuite tries to chown not existent
+                              spool directory
+                 Issue:     90 (hedeby issue)
+                 Review:    RH
+
 CR-2007-08-14-0: Cleanup:   o compile_source(): if only compile hooks are
                                  executed (ts-menu 50) ) the update_source
                                  procedure is skipped for GE source update
